practica y ejercicio localstorage

--- a/JavaScript/pagina.html
+++ b/JavaScript/pagina.html
@@ -5,11 +5,31 @@
     <title>JSON</title>
 </head>
 <body>
-    <h1>JSON</h1>
-        <div id="peliculas">
-            <h2>peliculas</h2>
-        </div>
+    <h1>Ejercicio Local storage</h1>
+    <h2>Añadir pelicula</h2>
+    <form action="" id="peliculas" >
+        <input type="text"  id="nombre"/>
+        <button type="submit">Guardar</button>
+    </form>
 
-    <script type="text/javascript" src="js/json.js"></script>
+    <h2>Peliculas</h2>
+    <div id="ejemplo">
+        <ul id="lista">
+
+        </ul>
+    </div>
+
+    <h2>Borrar pelicula</h2>
+
+    <form action="" id="FormBorrar">
+        <input type="text" id="valor"/>
+        <input type="submit" value="borrar">
+    </form>
+
+
+    <script type="text/javascript" src="js/ejercicio-localstorage.js"></script>
 </body>
 </html>
+
+
+
