--- a/JQuery/texto.html
+++ b/JQuery/texto.html
@@ -11,8 +11,10 @@
     <h1>JQuery</h1>
 
     <h3>Añadir nuevos enlaces</h3>
+    <div id="prueba">
     <input type="texto" id="add_link" />
     <button id="add_button">Añadir</button>
+        </div>
 
     <ul id="menu">
         <li><a href="https://google.es"></a></li>
