--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<script type="text/javascript" src="js/22-timers.js"></script>
+		<script type="text/javascript" src="js/17-arrays.js"></script>
 	</head>
 <body>
 	<p>prueba</p>
